# AnyDataNext

./: .gitignore  CLAUDE.md  README.md  check_connectivity.sh  frontend-next-start.sh  log.txt  requirements.txt  start_dev.sh  vercel-build.sh  vercel.json
.github/workflows/: build.yml  server-build.yml
.idx/: dev.nix
api/: index.py
backend/: requirements.txt  tree-help.md
backend/app/: app.py
backend/app/data/: users.json
backend/app/scripts/: articles.py
backend/app/utils/: auth.py  client.py  logging.py  parsers.py  process.py
docs/: FRONTEND_REWRITE.md  HOTFIX.MD  endpoints-fix.md  env-config.md  frontend_init.sh  production_server.md
frontend/: .env.example  .env.production  .eslintignore  next.config.ts
frontend-next/: README-DEPLOY.md  README.md  jest.config.js  jest.setup.js  next.config.js  package.json  playwright.config.ts
frontend-next/__tests__/app/: page.test.tsx
frontend-next/app/: layout.tsx  page.tsx
frontend-next/app/upload/: page.tsx
frontend-next/components/data-display/: ProgressIndicator.tsx
frontend-next/components/forms/: FileUpload.tsx
frontend-next/e2e/playwright/: home.spec.ts
frontend-next/e2e/puppeteer/: home.test.js
frontend-next/public/: 404.html
frontend-next/types/: models.ts
frontend/src/app/: page.tsx
frontend/src/components/: ExistingDatasets.tsx  FileUpload.tsx  JobStatusRecovery.tsx  ModelSelector.tsx  SuggestionButton.tsx  (+1 more)
rustui/: Cargo.toml  README.md
rustui/.github/workflows/: rust.yml
rustui/src/: api.rs  app.rs  config.rs  error.rs  logger.rs  main.rs  processors.rs  tests.rs  ui.rs
(+7 files in other folders)
