[package]
name = "anydataset-tui"
version = "0.1.0"
edition = "2021"
authors = ["M&K (c)2025"]
description = "Terminal UI client for AnyDataNext"

[dependencies]
ratatui = "0.26.0"
crossterm = "0.27.0"
tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
anyhow = "1.0.79"
clap = { version = "4.4.13", features = ["derive"] }
dirs = "5.0.1"
async-trait = "0.1.77"
futures = "0.3.30"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
toml = "0.8.8"
tui-input = "0.8.0"
chrono = "0.4.31"
lazy_static = "1.4.0"
once_cell = "1.19.0"
tempfile = "3.10.0"
log = "0.4.20"

[dev-dependencies]
mockito = "1.2.0"
assert_fs = "1.1.0"
predicates = "3.0.4"
test-case = "3.3.1"
pretty_assertions = "1.4.0"
tokio-test = "0.4.3"

[features]
default = []
integration-tests = []

# Flaga dla testów, które wymagają rzeczywistego backendu
# cargo test --features backend-tests
backend-tests = []